@@ -10,10 +10,12 @@ import com.hong.orderservice.domain.Order;
 import com.hong.orderservice.domain.OrderProduct;
 import com.hong.orderservice.domain.base.Address;
 import com.hong.orderservice.domain.status.DeliveryStatus;
+import com.hong.orderservice.domain.status.OrderStatus;
 import com.hong.orderservice.dto.OrderPagingResponseDto;
+import com.hong.orderservice.dto.OrderProductResponseDto;
 import com.hong.orderservice.dto.OrderResponseDto;
-import com.hong.orderservice.repository.DeliveryRepository;
 import com.hong.orderservice.repository.OrderRepository;
+import com.hong.orderservice.web.dto.OrderProductRequest;
 import com.hong.orderservice.web.dto.OrderRequestDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -22,9 +24,11 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.*;
 
 @Service
 @RequiredArgsConstructor
@@ -33,7 +37,6 @@ import java.util.stream.Collectors;
 public class OrderServiceImpl implements OrderService {
 
     private final OrderRepository orderRepository;
-    private final DeliveryRepository deliveryRepository;
     private final Resilience4JProductServiceClient resilience4JProductServiceClient;
     private final Resilience4JHotDealServiceClient resilience4JHotDealServiceClient;
 
@@ -42,87 +45,85 @@ public class OrderServiceImpl implements OrderService {
     @Transactional
     @Override
     public OrderResponseDto createOrder(Long userId, OrderRequestDto requestDto) {
-        // hotDealProducts 조회
+        // 1. hotDealProducts 조회 및 검증
         List<HotDealProductStockCheckResponseDto> hotDealProductStockCheckResponseDto = fetchHotDealProductAndValidate(userId, requestDto.getProducts());
 
-        // products 조회
+        // 2. products 조회 및 검증
         List<ProductStockCheckResponseDto> productStockCheckResponseDtos = fetchProductAndValidate(userId, requestDto.getProducts());
 
-        // 주문 생성
+        // 3. order, orderProduct 생성
         Order savedOrder = createOrder(userId, requestDto, hotDealProductStockCheckResponseDto, productStockCheckResponseDtos);
-        return convertToOrderResponse(savedOrder);
+
+        // 4. 응답 Dto 변환
+        return convertToOrderResponse(savedOrder, savedOrder.getOrderProducts());
     }
 
     // 주문 내역 페이징
     @Transactional
     @Override
     public OrderPagingResponseDto getOrders(Long userId, Long cursor, int size) {
-        updateDeliveryAndOrderStatusForUser(userId);
-        // cursor 가 null 이면 가장 최근 데이터 조회 처리
-        if (cursor == null) cursor = Long.MAX_VALUE;
+        // 1. orders 페이징 조회(cursor 기반)
+        List<Order> page = fetchOrdersByCursor(userId, cursor, size);
 
-        // PageRequest 객체로 조회 size 지정
-        PageRequest pageRequest = PageRequest.of(0, size);
+        // 2. 사용자 조회 시점에서 주문, 배송 상태 update
+        LocalDateTime now = LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS);
+        updateDeliveryAndOrderStatusForUser(now, page);
 
-        // 페이징 조회
-        List<Order> page = orderRepository.findOrdersByCursorAndUserIdAndSize(cursor, userId, pageRequest);
-
-        // 응답 Dto 변환
-        List<OrderResponseDto> orderResponseDtos = page.stream()
-                .map(this::convertToOrderResponse)
-                .collect(Collectors.toList());
-
-        // nextCursor 지정
-        Long nextCursor = orderResponseDtos.isEmpty() ? 0 : orderResponseDtos.get(orderResponseDtos.size() - 1).getOrderId();
-        return new OrderPagingResponseDto(nextCursor, orderResponseDtos);
+        // 3. 응답 Dto 변환, cursor 지정
+        return convertToOrderPagingResponse(page);
     }
 
     // 주문 단건 조회
     @Transactional
     @Override
     public OrderResponseDto getOrder(Long userId, Long orderId) {
-        updateDeliveryAndOrderStatusForUser(userId);
-        // Order 조회
+        // 1. Order 조회 및 검증
         Order order = getOrderWithOrderProductsAndDelivery(userId, orderId);
-        // 응답 Dto 변환
-        return convertToOrderResponse(order);
+
+        // 2. 사용자 조회 시점에서 주문, 배송 상태 update
+        LocalDateTime now = LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS);
+        updateDeliveryAndOrderStatusForUser(now, List.of(order));
+
+        // 3. 응답 Dto 변환
+        return convertToOrderResponse(order, order.getOrderProducts());
     }
 
     // 주문 취소
     @Transactional
     @Override
     public OrderResponseDto cancelOrder(Long userId, Long orderId) {
-        // order 조회, 취소 가능 검증
-        Order order = fetchOrderAndValidateCancel(userId, orderId);
+        // 1. order 조회 및 취소 가능 여부 검증
+        Order order = fetchOrderAndValidateCancelAble(userId, orderId);
 
-        // 주문 상품 중 핫딜 상품 재고 증가 처리
+        // 2. orderProduct 중 hotDealProduct 재고 증가 요청
         increaseHotDealProductStockAndValidate(userId, orderId, order);
 
-        // 주문 상품 중 일반 상품 재고 증가 처리
-        // 핫딜 상품에 대한 재고 증가는 성공 했지만, 일반 상품 재고 증가 호출이 실패 하면 성공한 핫딜 상품에 대한 재고 감소 처리
+        // 3. orderProduct 중 product 재고 증가 요청
+        // (hotDealProduct 에 대한 재고 증가는 성공 했지만, product 재고 증가 호출이 실패 하면 성공한 hotDealProduct 대한 재고 감소 처리)
         try {
             increaseProductStockAndValidate(userId, orderId, order);
         } catch (OrderException e) {
             decreaseHotDealProductStockAndValidate(userId, orderId, order);
             throw e;
         }
-        // 주문, 배송 상태 변경 (Cancel)
+        // 4. order, delivery 주문 취소 처리(Cancel)
         order.updateStatusToCancel();
 
+        // 5. 응답 Dto 변환
         return convertToOrderResponse(order);
     }
 
-
-    // 반품
+    // 환불
     @Transactional
     @Override
     public OrderResponseDto returnOrder(Long userId, Long orderId) {
-        // order 조회, 환불 가능 검증
+        // 1. order 조회 및 환불 가능 검증
         Order order = fetchOrderAndValidateReturn(userId, orderId);
 
-        // 주문, 배송 상태 변경 (ReturnRequested)
-        order.updateStatusReturnRequested();
+        // 2. 주문, 배송 반품 처리 (ReturnRequested)
+        order.updateStatusReturnRequested(LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS));
 
+        // 3. 응답 Dto 변환
         return convertToOrderResponse(order);
     }
 
@@ -132,61 +133,62 @@ public class OrderServiceImpl implements OrderService {
 
         Delivery delivery = order.getDelivery();
         DeliveryStatus deliveryStatus = delivery.getDeliveryStatus();
-        LocalDateTime completedAt = delivery.getCompletedAt();
-        LocalDateTime now = LocalDateTime.now();
+        LocalDateTime now = LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS);
+        LocalDateTime oneDatAgo = now.minusDays(1);
 
         // 배송 완료 후 1일 이내 까지 반품 가능
-        if (!(deliveryStatus.equals(DeliveryStatus.DELIVERED) && completedAt != null && now.isBefore(completedAt.plusDays(1)))) {
+        if (!(deliveryStatus.equals(DeliveryStatus.DELIVERED)
+                && delivery.getCompletedAt() != null
+                && delivery.getCompletedAt().isBefore(oneDatAgo))) {
             log.debug("환불은 배송 완료 후 하루 이내에 가능합니다. userId = {}, orderId = {}", userId, orderId);
             throw new OrderException(ErrorCode.ORDER_RETURN_EXPIRED, userId, orderId);
         }
         return order;
     }
 
+    // orders 페이징 조회(cursor 기반)
+    private List<Order> fetchOrdersByCursor(Long userId, Long cursor, int size) {
+        cursor = (cursor == null) ? Long.MAX_VALUE : cursor;
+        PageRequest pageRequest = PageRequest.of(0, size);
+        List<Order> page = orderRepository.findOrdersByCursorAndUserIdAndSize(cursor, userId, pageRequest);
+        return page;
+    }
 
     // Delivery Status 사용자 조회 시점에서 update
-    private void updateDeliveryAndOrderStatusForUser(Long userId) {
-        List<Long> orderIds = orderRepository.findOrdersByUserId(userId);
+    void updateDeliveryAndOrderStatusForUser(LocalDateTime now, List<Order> page) {
 
         // 스케쥴링과 별개로 사용자의 관점에서 배송 상태가 변경 되야 한다.
-        LocalDateTime now = LocalDateTime.now();
         LocalDateTime oneDayAgo = now.minusDays(1);
-        // 결제 완료, 주문 후 1일 경과한 배송 DELIVERING 로 상태 변경
-        deliveryRepository.bulkUpdatePendingDeliveriesToDeliveringByUserId(
-                userId,
-                oneDayAgo,
-                now,
-                DeliveryStatus.PENDING,
-                DeliveryStatus.DELIVERING
-        );
 
-        // 결제 완료, 배송 시작 후 1일 경과한 배송 DELIVERED 로 상태 변경
-        deliveryRepository.bulkUpdateDeliveringDeliveriesToDeliveredByUserId(
-                userId,
-                oneDayAgo,
-                now,
-                DeliveryStatus.DELIVERING,
-                DeliveryStatus.DELIVERED
-        );
+        // 1. 결제 완료 후 1일 경과한 배송 DELIVERING 으로 변경
+        List<Order> updateDelivering = page.stream()
+                .filter(o -> o.getStatus() == OrderStatus.PAID
+                        && o.getPaidAt() != null
+                        && o.getPaidAt().isBefore(oneDayAgo)
+                        && o.getDelivery().getDeliveryStatus() == DeliveryStatus.DELIVERABLE)
+                .toList();
+        updateDelivering.forEach(o -> o.getDelivery().updateToDelivering(now));
 
-        // 배송 상태 반품 처리
-        deliveryRepository.bulkUpdateDeliveryStatusReturnedByUserId(
-                userId,
-                now,
-                oneDayAgo
-        );
+        // 2. 배송 시작 후 1일 경과한 배송 DELIVERED 로 변경
+        List<Order> updateToDelivered = page.stream()
+                .filter(o -> o.getDelivery().getDeliveryStatus() == DeliveryStatus.DELIVERING
+                        && o.getDelivery().getStartedAt().isBefore(oneDayAgo))
+                .toList();
+        updateToDelivered.forEach(o -> o.getDelivery().updateToDelivered(now));
 
-        // 주문 상태 배송 처리
-        orderRepository.bulkUpdateOrderStatusToReturnedByUserId(
-                userId,
-                oneDayAgo
-        );
+        // 3. 환불 처리 후 1일 경과한 된 배송 RETURNED 로 변경
+        List<Order> updateToReturned = page.stream()
+                .filter(o -> o.getStatus() == OrderStatus.RETURN_REQUESTED
+                        && o.getDelivery().getDeliveryStatus() == DeliveryStatus.RETURN_REQUESTED
+                        && o.getDelivery().getReturnStartedAt().isBefore(now))
+                .toList();
+        updateToReturned.forEach(o -> o.updateStatusReturned(now));
     }
 
     // 결제 까지 완료한 주문 조회, 검증 (Fetch Join 으로 orderProducts, delivery 조회)
     private Order getOrderWithOrderProductsAndDelivery(Long userId, Long orderId) {
-        // 결제 까지 완료한 주문 조회 (Fetch Join 으로 orderProducts, delivery 조회)
-        return orderRepository.findPaidOrderByOrderIdAndUserIdWithOpAndD(orderId, userId).orElseThrow(() -> {
+        // 주문 조회 (Fetch Join 으로 orderProducts, delivery 조회)
+        return orderRepository.findOrderWithDeliveryAndOpById(orderId, userId).orElseThrow(() -> {
             log.debug("요청된 주문이 존재하지 않습니다. userId = {}, orderId = {}", userId, orderId);
             return new OrderException(ErrorCode.ORDER_NOT_FOUND, userId, orderId);
         });
@@ -194,7 +196,7 @@ public class OrderServiceImpl implements OrderService {
 
 
     // order 조회, 취소 가능 검증
-    private Order fetchOrderAndValidateCancel(Long userId, Long orderId) {
+    private Order fetchOrderAndValidateCancelAble(Long userId, Long orderId) {
         // 결제 까지 완료한 주문 조회 (Fetch Join 으로 orderProducts, delivery 조회)
         Order order = orderRepository.findPaidOrderByOrderIdAndUserIdWithOpAndD(orderId, userId).orElseThrow(() -> {
             log.debug("요청된 주문이 존재하지 않습니다. userId = {}, orderId = {}", userId, orderId);
@@ -217,33 +219,34 @@ public class OrderServiceImpl implements OrderService {
         // 총 주문 가격 구하기
         List<OrderProduct> orderProducts = new ArrayList<>();
 
+        // hotDealProduct 에서 주문 가격 계산
         int hotDealProductAmount = hotDealProductStockCheckResponseDtos.stream()
-                .mapToInt(product -> product.getRequestQuantity() * product.getHotDealPrice())
+                .mapToInt(product -> product.getRequestedQuantity() * product.getHotDealPrice())
                 .sum();
-        int productAmount = hotDealProductStockCheckResponseDtos.stream()
-                .mapToInt(product -> product.getRequestQuantity() * product.getHotDealPrice())
+        // product 에서 주문 가격 계산
+        int productAmount = productStockCheckResponseDtos.stream()
+                .mapToInt(product -> product.getRequestedQuantity() * product.getPrice())
                 .sum();
 
+        // 총 주문 가격
         int amount = hotDealProductAmount + productAmount;
 
         // OrderProduct 생성
         // hotDealProduct 에 대한 주문 생성
         orderProducts.addAll(hotDealProductStockCheckResponseDtos.stream()
-                .map(product -> OrderProduct.create(
-                        product.getProductId(),
-                        product.getHotDealId(),
+                .map(product -> OrderProduct.createHotDealProduct(
                         product.getHotDealProductId(),
                         product.getProductTitle(),
-                        product.getRequestQuantity(),
+                        product.getRequestedQuantity(),
                         product.getHotDealPrice()))
                 .toList());
 
         // product 에 대한 주문 생성
         orderProducts.addAll(productStockCheckResponseDtos.stream()
-                .map(product -> OrderProduct.create(
+                .map(product -> OrderProduct.createProduct(
                         product.getProductId(),
                         product.getTitle(),
-                        product.getQuantity(),
+                        product.getRequestedQuantity(),
                         product.getPrice()))
                 .toList());
 
@@ -257,7 +260,7 @@ public class OrderServiceImpl implements OrderService {
 
 
     // 상품 조회
-    private List<ProductStockCheckResponseDto> fetchProductAndValidate(Long userId, List<OrderRequestDto.OrderProductRequest> products) {
+    private List<ProductStockCheckResponseDto> fetchProductAndValidate(Long userId, List<OrderProductRequest> products) {
         // 요청에서 products 추출
         List<ProductStockCheckRequestDto> productStockCheckRequestDtos = convertToProductStockCheckRequestDto(products);
 
@@ -275,7 +278,7 @@ public class OrderServiceImpl implements OrderService {
     }
 
     // 핫딜 상품 조회
-    private List<HotDealProductStockCheckResponseDto> fetchHotDealProductAndValidate(Long userId, List<OrderRequestDto.OrderProductRequest> products) {
+    private List<HotDealProductStockCheckResponseDto> fetchHotDealProductAndValidate(Long userId, List<OrderProductRequest> products) {
         // 요청에서 hotDealProducts 추출
         List<HotDealProductStockCheckRequestDto> hotDealProductStockCheckRequestDtos = convertToHotDealProductStockCheckRequestDto(products);
 
@@ -283,7 +286,7 @@ public class OrderServiceImpl implements OrderService {
         if (hotDealProductStockCheckRequestDtos.isEmpty()) return new ArrayList<>();
 
         // hotDealProducts 조회 호출(hotDeal 검증, 재고 확인, 요청 검사)
-        List<HotDealProductStockCheckResponseDto> hotDealProductStockCheckResponseDtos = resilience4JHotDealServiceClient.fetchProducts(hotDealProductStockCheckRequestDtos);
+        List<HotDealProductStockCheckResponseDto> hotDealProductStockCheckResponseDtos = resilience4JHotDealServiceClient.fetchProductsAndValidateStock(hotDealProductStockCheckRequestDtos);
         if (hotDealProductStockCheckResponseDtos.isEmpty()) {
             log.debug("핫딜 상품 조회 호출을 실패했습니다. userId = {}, hotDealProducts = {}", userId, hotDealProductStockCheckRequestDtos);
             throw new OrderException(ErrorCode.ORDER_FETCH_HOTDEAL_PRODUCT_FAILED, userId, hotDealProductStockCheckRequestDtos);
@@ -351,67 +354,63 @@ public class OrderServiceImpl implements OrderService {
 
 
     // products 에서 일반 상품 조회 Dto 변환
-    private List<ProductStockCheckRequestDto> convertToProductStockCheckRequestDto(List<OrderRequestDto.OrderProductRequest> products) {
+    private List<ProductStockCheckRequestDto> convertToProductStockCheckRequestDto(List<OrderProductRequest> products) {
         return products.stream()
-                .filter(product -> product.getHotDealId() == null)
+                .filter(product -> product.getHotDealProductId() == null && product.getProductId() != null)
                 .map(product -> new ProductStockCheckRequestDto(
                         product.getProductId(),
                         product.getQuantity()))
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     // products 에서 핫딜 상품 조회 Dto 변환
-    private List<HotDealProductStockCheckRequestDto> convertToHotDealProductStockCheckRequestDto(List<OrderRequestDto.OrderProductRequest> products) {
+    private List<HotDealProductStockCheckRequestDto> convertToHotDealProductStockCheckRequestDto(List<OrderProductRequest> products) {
         return products.stream()
-                .filter(request -> request.getHotDealId() != null)
+                .filter(request -> request.getProductId() == null && request.getHotDealProductId() != null)
                 .map(request -> new HotDealProductStockCheckRequestDto(
-                        request.getHotDealId(),
                         request.getHotDealProductId(),
                         request.getQuantity()))
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     // 요청 dto 에서 product 추출, feignClient 요청 dto 변환
     private List<ProductStockUpdateRequestDto> convertToProductStockUpdateDto(Order order) {
         return order.getOrderProducts().stream()
-                .filter(op -> op.getHotDealProductId() == null)
+                .filter(op -> op.getHotDealProductId() == null && op.getProductId() != null)
                 .map(op -> new ProductStockUpdateRequestDto(
                         op.getProductId(),
                         op.getQuantity()
                 ))
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     // 요청 dto 에서 hotDealProduct 추출, feignClient 요청 dto 변환
     private List<HotDealProductStockUpdateRequestDto> convertToHotDealProductStockUpdateDto(Order order) {
-        List<HotDealProductStockUpdateRequestDto> hotDealProductStockUpdateRequestDtos = order.getOrderProducts().stream()
-                .filter(op -> op.getHotDealProductId() != null)
+        return order.getOrderProducts().stream()
+                .filter(op -> op.getProductId() == null && op.getHotDealProductId() != null)
                 .map(op -> new HotDealProductStockUpdateRequestDto(
-                        op.getHotDealId(),
                         op.getHotDealProductId(),
                         op.getQuantity()))
-                .collect(Collectors.toList());
-        return hotDealProductStockUpdateRequestDtos;
+                .collect(toList());
+    }
+
+    // 주문 내역 페이징 조회 응답 Dto 변환, cursor 지정
+    private OrderPagingResponseDto convertToOrderPagingResponse(List<Order> page) {
+        List<OrderResponseDto> orderResponseDtos = page.stream().map(this::convertToOrderResponse).toList();
+        Long nextCursor = orderResponseDtos.isEmpty() ? 0 : orderResponseDtos.get(orderResponseDtos.size() - 1).getOrderId();
+        return new OrderPagingResponseDto(nextCursor, orderResponseDtos);
     }
 
     // OrderResponseDto 응답 변환
     private OrderResponseDto convertToOrderResponse(Order order) {
-        return new OrderResponseDto(
-                order.getId(),
-                order.getUserId(),
-                order.getTotalPrice(),
-                order.getStatus(),
-                order.getDelivery().getDeliveryStatus(),
-                order.getCreatedAt(),
-                order.getPaidAt(),
-                order.getOrderProducts().stream().map(op -> new OrderResponseDto.OrderProductDto(
-                        op.getProductId(),
-                        op.getHotDealId(),
-                        op.getHotDealProductId(),
-                        op.getProductTitle(),
-                        op.getQuantity(),
-                        op.getPrice()
-                )).collect(Collectors.toList())
-        );
+        return new OrderResponseDto(order);
+    }
+
+    private OrderResponseDto convertToOrderResponse(Order order, List<OrderProduct> orderProducts) {
+        List<OrderProductResponseDto> orderProductResponseDtos = orderProducts
+                .stream()
+                .map(OrderProductResponseDto::new)
+                .collect(toList());
+        return new OrderResponseDto(order, orderProductResponseDtos);
     }
 }
